[package]
name = "nanometers_plug"
version = "0.1.0"
edition = "2021"
authors = ["aizcutei <aiz.cutei@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://nm.aizcutei.com"
description = "Plugin server for nanometers."

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git"}
interprocess = "1.2.1"
bytemuck = "1.14.3"

[target.'cfg(unix)'.dependencies]
nix = {version = "0.28.0", features = ["net"]}

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
